feat: added the ability to parameterize, animate, split the assembly in half, transparency

--- a/PneumocylinderConfigurator/ParamsWidget.ui
+++ b/PneumocylinderConfigurator/ParamsWidget.ui
@@ -183,19 +183,6 @@
       <attribute name="title">
        <string>Параметризация</string>
       </attribute>
-      <widget class="QPushButton" name="pushButton">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>20</y>
-         <width>93</width>
-         <height>28</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>PushButton</string>
-       </property>
-      </widget>
      </widget>
      <widget class="QWidget" name="tab_scene">
       <attribute name="title">
@@ -289,7 +276,7 @@
          <item row="6" column="0">
           <widget class="QLabel" name="label_3">
            <property name="text">
-            <string>Корпус</string>
+            <string>Прозрачность </string>
            </property>
           </widget>
          </item>
